# aikartos

./: .gitignore  CMakeLists.txt  FAR2450.tmp  README.md
.github/_workflows/: build.yml
aikartos/: .cproject  .gitignore  .project  STM32C011D6YX_FLASH.ld
aikartos/Inc/aikartos/const/: constants.hpp
aikartos/Inc/aikartos/device/: device.hpp
aikartos/Inc/aikartos/kernel/: config.hpp  core.hpp  impl.hpp  impl_base.hpp  kernel.hpp
aikartos/Inc/aikartos/rnd/: lfsr.hpp  xorshift128.hpp
aikartos/Inc/aikartos/sch/: events.hpp  scheduler_lottery.hpp  scheduler_priority_aging.hpp  waiting_tasks_queue.hpp
aikartos/Inc/aikartos/sync/: priority_queue.hpp  semaphore.hpp
aikartos/Inc/aikartos/sync/policies/: mutex_policy.hpp  no_mutex.hpp  no_yield.hpp  yield_policy.hpp
aikartos/Inc/aikartos/tasks/: descriptor.hpp
aikartos/Inc/aikartos/utils/: light_bitset.hpp  sparse_storage.hpp  static_type_info.hpp
aikartos/Src/aikartos/asm/: kernel_launch_impl.s  pendsv_handler.s
aikartos/Src/aikartos/kernel/: kernel.cpp  panic.cpp
aikartos/Src/tests/: lottery.cpp  priority_aging.cpp  stack_overflow.cpp  tests.hpp
aikartos/inc/aikartos/const/: constants.hpp
aikartos/inc/aikartos/device/: device.hpp  timebase.hpp  uart.hpp
aikartos/inc/aikartos/kernel/: api.hpp  core.hpp  impl.hpp  impl_base.hpp  kernel.hpp  panic.hpp
aikartos/inc/aikartos/memory/: allocator_base.hpp  allocator_buddy.hpp  allocator_bump.hpp  allocator_dlist.hpp  allocator_free_list.hpp  allocator_tlsf.hpp  core.hpp  memory.hpp
aikartos/inc/aikartos/memory/allocator/buddy/: base.hpp
aikartos/inc/aikartos/memory/allocator/buddy/impl/: fixed.hpp  region.hpp
aikartos/inc/aikartos/memory/allocator/tlsf/: base.hpp
aikartos/inc/aikartos/memory/allocator/tlsf/impl/: fixed.hpp  region.hpp
aikartos/inc/aikartos/modules/: bundle.hpp  module.hpp
aikartos/inc/aikartos/platform/: platform.hpp
aikartos/inc/aikartos/rnd/: xorshift128.hpp  xorshift32.hpp
aikartos/inc/aikartos/sch/: scheduler_cfs_like.hpp  scheduler_coop_preemptive.hpp  scheduler_edf.hpp  scheduler_fixed_priority.hpp  scheduler_lottery.hpp  scheduler_mlfq.hpp  scheduler_priority_aging.hpp  scheduler_round_robin.hpp  scheduler_template  scheduler_weighted_lottery.hpp  statistic.hpp  waiting_tasks_queue.hpp
aikartos/inc/aikartos/sdk/: aikartos_api.h
aikartos/inc/aikartos/sync/: circular_queue.hpp  irq_critical_section.hpp  lock_guarg.hpp  priority_queue.hpp  spin_conditional_variable.hpp  spin_lock.hpp  stable_priority_queue.hpp  sync.hpp
aikartos/inc/aikartos/syscalls/: syscalls.h
aikartos/inc/aikartos/tasks/: config.hpp  control_block.hpp  object.hpp
aikartos/inc/aikartos/this_task/: this_task.hpp
aikartos/inc/aikartos/utils/: align_up.hpp  circular_deque.hpp  container_of.hpp  crs32.hpp  flagged_storage.hpp  object_pool.hpp  sparse_storage.hpp  static_type_info.hpp  static_vector.hpp
aikartos/src/: main.cpp
aikartos/src/aikartos/asm/: hard_fault_handler.s
aikartos/src/aikartos/kernel/: kernel.cpp
aikartos/src/aikartos/memory/: memory.cpp
aikartos/src/aikartos/platform/f411/device/: uart.cpp
aikartos/src/aikartos/platform/f411/linker/: link_ram.ld
aikartos/src/aikartos/platform/f411/startup/: startup_stm32f411retx.s
aikartos/src/aikartos/platform/h753/device/: uart.cpp
aikartos/src/aikartos/platform/h753/startup/: startup_stm32h753zitx.s_
aikartos/src/aikartos/syscalls/: svc_handler.cpp  syscalls.cpp
aikartos/src/sys/: sysmem.c
aikartos/src/tests/: _the_snake.cpp  console.hpp  coop_preemptive.cpp  device_uart_echo.cpp  edf.cpp  fixed_priority.cpp  floating_point_01.cpp  fpu_demo_01.cpp  fpu_demo_02.cpp  fpu_demo_03.cpp  lottery.cpp  memory_allocation_dlist.cpp  memory_allocation_free_list.cpp  memory_allocator_buddy.cpp  memory_allocator_buddy_fixed.cpp  memory_allocator_bump.cpp  memory_allocator_free_list.cpp  memory_allocator_tlsf.cpp  memory_allocator_tlsf_fixed.cpp  modules_001.cpp  priority_aging.cpp  producer_consumer.cpp  round_robin.cpp  sch_cfs_like.cpp  sch_mlfq.cpp  stack_overflow.cpp  syscalls.cpp  terminal.hpp  tests.hpp  uart_blocking_write.cpp  weighted_lottery.cpp
modules/: CMakeLists.txt  build.cmd  create_bin.py  create_flash_bundle.py  flash.cmd  flash_bin.py  gcc-arm-none-eabi.cmake  modules.md  modules_howto.md  test.cpp
modules/cmake/: aika_create_module.cmake
modules/modules/: CMakeLists.txt
modules/modules/rust_module/: .gitignore  CMakeLists.txt  Cargo.toml
modules/modules/rust_module/src/: lib.rs  module.ld
modules/modules/test/: CMakeLists.txt  description.txt
modules/modules/test/src/: module.cpp
