file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(DIR ${SUBDIRS})
    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${DIR})
        set(CMAKE_FILE ${CMAKE_CURRENT_SOURCE_DIR}/${DIR}/CMakeLists.txt)
        if(EXISTS ${CMAKE_FILE})
            add_subdirectory(${DIR})
        endif()
    endif()
endforeach()
